<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/butt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8A6A6"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECCB9C"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv"
            android:textColor="#6D4C41" />

        <RadioGroup
            android:id="@+id/rgroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:checkedButton="@id/rthree"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="48dp"
                android:text="@string/rone" />

            <RadioButton
                android:id="@+id/rtwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rtwo"
                android:textColor="#455A64"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/rthree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rthree"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/rfour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rfour"
                android:textColor="#455A64"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cone" />

            <CheckBox
                android:id="@+id/ctwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ctwo" />

            <CheckBox
                android:id="@+id/cthree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cthree" />

            <CheckBox
                android:id="@+id/cfour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cfour" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="#F8BBD0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>